--- a/booking.html
+++ b/booking.html
@@ -48,7 +48,8 @@
           <a href="socials.html" class="navbar5_link w-nav-link">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank"
+            class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
@@ -76,7 +77,8 @@
           <a href="socials.html" class="navbar5_link w-nav-link w--nav-link-open">Socials</a>
         </div>
         <div class="navbar5_menu-right">
-          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank" class="button is-secondary is-small w-button">Shop</a>
+          <a href="https://my-store-bc2fca.creator-spring.com/" target="_blank"
+            class="button is-secondary is-small w-button">Shop</a>
           <a href="contact.html" class="button is-small w-button">Contact</a>
         </div>
       </nav>
@@ -319,10 +321,11 @@ a,
               <div class="padding-vertical padding-xxlarge">
                 <div class="w-layout-grid home_hero-header_content-wrapper">
                   <div class="home_hero-header_content-left">
-                    <h1 class="heading-style-h1">Book a Professional FPV Pilot</h1>
+                    <h1 class="heading-style-h1" data-content="booking_header_title">Book a Professional FPV Pilot</h1>
                   </div>
                   <div class="home_hero-header_content-right">
-                    <p class="text-size-medium">Bring your vision to life with our expert FPV piloting services. Whether
+                    <p class="text-size-medium" data-content="booking_header_description">Bring your vision to life with
+                      our expert FPV piloting services. Whether
                       you're looking to capture stunning aerial footage for your next film production, event, or a
                       special project, our professional FPV pilots are ready to take on the challenge. With years of
                       experience in various conditions and environments, we ensure high-quality, dynamic shots every
@@ -347,13 +350,14 @@ a,
               <div class="w-layout-grid home_feature_component">
                 <div class="home_feature_content">
                   <div class="margin-bottom margin-xsmall">
-                    <div class="text-weight-semibold">Experienced</div>
+                    <div class="text-weight-semibold" data-content="booking_feature_subtitle">Experienced</div>
                   </div>
                   <div class="margin-bottom margin-small">
-                    <h2>Why Choose Me as Your FPV Pilot?</h2>
+                    <h2 data-content="booking_feature_title">Why Choose Me as Your FPV Pilot?</h2>
                   </div>
                   <div class="margin-bottom margin-medium">
-                    <p class="text-size-medium">As an experienced FPV pilot, I bring a unique combination of technical
+                    <p class="text-size-medium" data-content="booking_feature_description">As an experienced FPV pilot,
+                      I bring a unique combination of technical
                       expertise and creativity to every project. With top-of-the-line equipment and years of hands-on
                       experience, I ensure that your vision comes to life with stunning aerial footage that stands out.
                     </p>
@@ -361,20 +365,22 @@ a,
                   <div class="w-layout-grid home_feature_item-list">
                     <div class="home_feature_text-wrapper">
                       <div class="margin-bottom margin-xsmall">
-                        <h6>Precision and Creativity in Every Shot</h6>
+                        <h6 data-content="booking_feature1_title">Precision and Creativity in Every Shot</h6>
                       </div>
                       <div class="margin-bottom margin-xsmall">
-                        <p>I take pride in delivering shots that perfectly blend technical precision with artistic
+                        <p data-content="booking_feature1_text">I take pride in delivering shots that perfectly blend
+                          technical precision with artistic
                           vision. Each project is personally tailored to meet your specific needs, ensuring breathtaking
                           visuals from unique perspectives that captivate your audience.</p>
                       </div>
                     </div>
                     <div class="home_feature_text-wrapper">
                       <div class="margin-bottom margin-xsmall">
-                        <h6>Consistent Quality in Any Environment</h6>
+                        <h6 data-content="booking_feature2_title">Consistent Quality in Any Environment</h6>
                       </div>
                       <div class="margin-bottom margin-xsmall">
-                        <p>No matter the location or weather conditions, I use the latest FPV technology to deliver
+                        <p data-content="booking_feature2_text">No matter the location or weather conditions, I use the
+                          latest FPV technology to deliver
                           stable, high-quality footage. My experience allows me to handle even the most challenging
                           environments, guaranteeing exceptional results every time.</p>
                       </div>
@@ -399,12 +405,14 @@ a,
                   <div class="text-align-center">
                     <div class="max-width-large">
                       <div class="margin-bottom margin-xsmall">
-                        <div class="text-weight-semibold">Aerial Excellence</div>
+                        <div class="text-weight-semibold" data-content="booking_services_subtitle">Aerial Excellence
+                        </div>
                       </div>
                       <div class="margin-bottom margin-small">
-                        <h2>Perfect for:</h2>
+                        <h2 data-content="booking_services_title">Perfect for:</h2>
                       </div>
-                      <p class="text-size-medium">Elevate Your Project with Stunning Aerial Footage</p>
+                      <p class="text-size-medium" data-content="booking_services_description">Elevate Your Project with
+                        Stunning Aerial Footage</p>
                     </div>
                   </div>
                 </div>
@@ -413,28 +421,30 @@ a,
                     <div class="margin-bottom margin-small"><img src="images/cinematic.svg" loading="lazy" alt=""
                         class="icon-1x1-smally icon-big"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">Cinematic Productions:</h3>
+                      <h3 class="heading-style-h4" data-content="booking_services_item1_title">Cinematic Productions:
+                      </h3>
                     </div>
-                    <p>Capture dynamic, immersive shots that bring your story to life with stunning aerial perspectives.
-                    </p>
+                    <p data-content="booking_services_item1_text">Capture dynamic, immersive shots that bring your story
+                      to life with stunning aerial perspectives.</p>
                   </div>
                   <div class="home_features-list_item">
                     <div class="margin-bottom margin-small"><img src="images/firework.svg" loading="lazy" alt=""
                         class="icon-1x1-smally icon-big"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">Live Events:</h3>
+                      <h3 class="heading-style-h4" data-content="booking_services_item2_title">Live Events:</h3>
                     </div>
-                    <p>Document the energy and excitement of concerts, festivals, or sporting events with unique,
-                      high-impact footage.</p>
+                    <p data-content="booking_services_item2_text">Document the energy and excitement of concerts,
+                      festivals, or sporting events with unique, high-impact footage.</p>
                   </div>
                   <div class="home_features-list_item">
                     <div class="margin-bottom margin-small"><img src="images/building.svg" loading="lazy" alt=""
                         class="icon-1x1-smally icon-big"></div>
                     <div class="margin-bottom margin-small">
-                      <h3 class="heading-style-h4">Real Estate Showcases:</h3>
+                      <h3 class="heading-style-h4" data-content="booking_services_item3_title">Real Estate Showcases:
+                      </h3>
                     </div>
-                    <p>Highlight properties from an elevated view, providing potential buyers with an unforgettable and
-                      comprehensive visual experience.</p>
+                    <p data-content="booking_services_item3_text">Highlight properties from an elevated view, providing
+                      potential buyers with an unforgettable and comprehensive visual experience.</p>
                   </div>
                 </div>
                 <!-- <div class="margin-top margin-xlarge">
@@ -448,30 +458,30 @@ a,
           </div>
         </div>
       </section>
-      <section class="section_home_benefits"></section>
-      <div class="padding-global">
-        <div class="container-large">
-          <div class="padding-section-large">
-            <div class="margin-bottom margin-xxlarge">
-              <div class="margin-bottom margin-xsmall">
-                <div class="text-weight-semibold">Hirering</div>
-              </div>
-              <div class="w-layout-grid home_benefits_component">
-                <div class="home_benefits_content-left">
-                  <h3>Get in Touch</h3>
+      <section class="section_home_benefits">
+        <div class="padding-global">
+          <div class="container-large">
+            <div class="padding-section-large">
+              <div class="margin-bottom margin-xxlarge">
+                <div class="margin-bottom margin-xsmall">
+                  <div class="text-weight-semibold" data-content="booking_contact_subtitle">Hirering</div>
                 </div>
-                <div class="home_benefits_content-right">
-                  <div class="margin-bottom margin-xsmall">
-                    <p class="text-size-medium">Ready to elevate your project with stunning FPV footage? Book your pilot
-                      today and take the first step toward capturing incredible aerial moments.</p>
+                <div class="w-layout-grid home_benefits_component">
+                  <div class="home_benefits_content-left">
+                    <h3 data-content="booking_contact_title">Get in Touch</h3>
                   </div>
-                  <a href="contact.html" class="button w-button">Contact</a>
+                  <div class="home_benefits_content-right">
+                    <div class="margin-bottom margin-xsmall">
+                      <p class="text-size-medium" data-content="booking_contact_description">Ready to elevate your project with stunning FPV footage? Book your pilot
+                        today and take the first step toward capturing incredible aerial moments.</p>
+                    </div>
+                    <a href="contact.html" class="button w-button" data-content="booking_contact_button">Contact</a>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
       </section>
     </main>
 
@@ -634,6 +644,7 @@ a,
 
   <script type="module">
     import ColorManager from './js/color-manager.js';
+    import BookingContentManager from './js/booking-content-manager.js';
   </script>
 
 </body>
